fixed jump on chicken

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ canvas {
 #gameOverScreenContainer {
     position: absolute;
     top: 0;
+    bottom: 0;
 }
 
 .fullscreenImg {
@@ -114,9 +115,10 @@ canvas {
     position: absolute;
     top: 0;
     width: 100%;
+    border-radius: 16px;
     text-align: center;
     background-color: saddlebrown;
-    height: 100vh;
+    height: 100%;
 }
 
 @media only screen and (max-width: 720px) {
@@ -134,6 +136,7 @@ canvas {
 
     .startScreenImg {
         width: 100vw;
+        height: 100%;
     }
 
     .rotateDeviceContainer {
@@ -158,12 +161,9 @@ canvas {
 }
 
 @media only screen and (max-height: 480px) {
-    canvas {
-        height: 100vh;
-    }
-
     canvas, .startScreenImg {
         border-radius: unset;
+        height: 100vh;
     }
 
     #fullscreen {
